--- a/build.gradle
+++ b/build.gradle
@@ -1,4 +1,7 @@
 buildscript {
+    dependencies {
+        classpath 'com.google.gms:google-services:4.3.13'
+    }
     ext {
         compose_ui_version = '1.1.1'
     }
