--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,6 +15,13 @@
         android:theme="@style/Theme.Kalendar"
         tools:targetApi="31">
         <activity
+            android:name=".Friend_Activity"
+            android:exported="false">
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
+        <activity
             android:name=".Friend_Request_Activity"
             android:exported="false">
             <meta-data
