--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -58,7 +58,8 @@
         </activity>
         <activity
             android:name=".AddAppointmentActivity"
-            android:exported="false">
+            android:exported="false"
+            android:theme="@style/Theme.Kalendar">
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
